alignment corrected

--- a/src/components/classroom/Classroom.css
+++ b/src/components/classroom/Classroom.css
@@ -30,6 +30,7 @@
     right: 5%;
     bottom: -5%;
     border: 1px black;
+    width: 40%;
 }
 
 .content-child span{
