--- a/src/subscription/Subscription.css
+++ b/src/subscription/Subscription.css
@@ -1,6 +1,7 @@
 .responsive-section {
-    height: 50vh;
+    height: 95vh;
     width: 100%; 
+    margin-bottom: 30px;
   }
   
   .section-header {
